--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Primera Web en Git</h1>
-    <h1>Primera Web en Git</h1>
-    <h1>Primera Web en Git</h1>
-    <h1>Primera Web en Git</h1>
+    <h1>Primera Web en GitHub</h1>
 </body>
 </html>
